--- a/Acteur.html
+++ b/Acteur.html
@@ -92,7 +92,7 @@ th {
   <tr>
     <td>Tom Wilkinson</td>
 	<td>Dr. Howard Mierzwiak</td>
-    <td><img src="Recourses/Acteur/Howard.png"  style="width:50;height:50;"></td>
+    <td><img src="Recourses/Acteur/Howard.PNG"  style="width:50;height:50;"></td>
   </tr>
 </table></center>
 <br><br><br>
@@ -105,16 +105,16 @@ th {
     <tr>
     <td>Kate Winslet</td>
 	<td>Clementine Kruczynski</td>
-    <td><img src="Recourses/Acteur/Clementine.png"  style="width:50;height:50;"></td>
+    <td><img src="Recourses/Acteur/Clementine.PNG"  style="width:50;height:50;"></td>
   </tr>
     <tr>
     <td>Kirsten Dunst</td>
 	<td>Mary Svevo</td>
-    <td><img src="Recourses/Acteur/Mary.png"  style="width:50;height:50;"></td>
+    <td><img src="Recourses/Acteur/Mary.PNG"  style="width:50;height:50;"></td>
   </tr>
     <tr>
     <td>Debbon Ayer</td>
 	<td>Joel's moeder</td>
-    <td><img src="Recourses/Acteur/Moeder.png"  style="width:50;height:50;"></td>
+    <td><img src="Recourses/Acteur/Moeder.PNG"  style="width:50;height:50;"></td>
   </tr>
 </table></center>
