--- a/Acteur.html
+++ b/Acteur.html
@@ -62,7 +62,7 @@ th {
 </head>
 <body>
   <ul style="font-family:courier"; >
-  <li style="float:right;background-color: #008cba;";><a href="CKVstart.html"; class="Home">Home</a></li>
+  <li style="float:right;background-color: #008cba;";><a href="index.html"; class="Home">Home</a></li>
   <li><a class="Recensie" href="Recensie.html">Recensie</a></li>
   <li><a class="Active" href="Acteur.html">Acteurs/Actrices</a></li>
   <li><a class="Momenten" href="Momenten.html">Leuke momenten</a></li>
