--- a/Recensie.html
+++ b/Recensie.html
@@ -45,7 +45,7 @@ a.Momenten:hover, a.Momenten:active{color:#64bcd2;}
 </head>
 <body>
   <ul style="font-family:courier"; >
-  <li style="float:right;background-color: #008cba;";><a href="CKVstart.html"; class="Home">Home</a></li>
+  <li style="float:right;background-color: #008cba;";><a href="index.html"; class="Home">Home</a></li>
   <li><a class="Active" href="Recensie.html">Recensie</a></li>
   <li><a class="Acteur" href="Acteur.html">Acteurs/Actrices</a></li>
   <li><a class="Momenten" href="Momenten.html">Leuke momenten</a></li>
