--- a/Acteur.html
+++ b/Acteur.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Acteurs/Actrices</title>
+    <title>Acteurs/Actrices</title
 <style>
 body{
     background-color:#2881ab
